--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Stat" asp-action="Chat">Netmail Chat</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Stat" asp-action="GetStatHTML">Netmail Chat</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,10 +21,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Stat" asp-action="Chat">Statistics</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Article" asp-action="GetArticlesHTML">News</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Chat" asp-action="Index">Chatting</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Stat" asp-action="GetStatHTML">Statistics</a>
                         </li>
                     </ul>
                 </div>
@@ -40,8 +43,9 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - Netmail Chat 
-            - <a asp-area="" asp-controller="Stat" asp-action="Chat">Statistics</a> 
+            - <a asp-area="" asp-controller="Article" asp-action="GetArticlesHTML">News</a>
             - <a asp-area="" asp-controller="Chat" asp-action="Index">Chatting</a>
+            - <a asp-area="" asp-controller="Stat" asp-action="GetStatHTML">Statistics</a>
         </div>
     </footer>
     @await RenderSectionAsync("Scripts", required: false)
